React custom scrollbar plus global css override fix

--- a/cards-web/public/css/global.css
+++ b/cards-web/public/css/global.css
@@ -1,3 +1,9 @@
+/** 
+ * Bulma.css overrides 
+ */
+html {
+    overflow-y: initial !important;
+}
 
 /* Forms */
 .input.is-floating {
